--- a/index.html
+++ b/index.html
@@ -3,26 +3,49 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Selena Powell - Real Estate</title>
+  <title>Selena Powell - Real Estate Agent</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="hero">
+  <header class="hero">
     <div class="text">
       <h1>Call Me to Discuss<br>Your Real Estate Needs!</h1>
-      <p>For more information:</p>
-      <ul>
-        <li>📞 <a href="tel:+12166065829">+216-606-5829</a></li>
-        <li>📧 <a href="mailto:SelenaPowell@kw.com">SelenaPowell@kw.com</a></li>
-        <li>🌐 <a href="https://selenapowell.kw.com" target="_blank">SelenaPowell.kw.com</a></li>
-      </ul>
+      <p>Helping you buy, sell, or invest — with confidence.</p>
+      <div class="buttons">
+        <a href="tel:+12166065829" class="btn">📞 Call Now</a>
+        <a href="mailto:SelenaPowell@kw.com" class="btn">📧 Email Me</a>
+        <a href="https://selenapowell.kw.com" target="_blank" class="btn">🌐 Visit Website</a>
+      </div>
     </div>
     <div class="image">
       <img src="selena.jpg" alt="Selena Powell">
     </div>
-  </div>
+  </header>
+
+  <section class="about">
+    <h2>About Me</h2>
+    <p>
+      Hi, I’m Selena Powell — a licensed real estate agent with Keller Williams.
+      I’m passionate about helping individuals and families find the perfect place to call home.
+      Whether you’re buying, selling, or investing, I’m here to guide you every step of the way with integrity,
+      clarity, and dedication. I believe real estate is more than a transaction — it’s a personal journey, and
+      I’m honored to be part of yours.
+    </p>
+  </section>
+
+  <section class="services">
+    <h2>Services</h2>
+    <ul>
+      <li>🏠 Home Buying Assistance</li>
+      <li>🏡 Home Selling Strategies</li>
+      <li>🏘️ Investment Property Guidance</li>
+      <li>📋 Market Analysis & Pricing</li>
+      <li>🔑 First-Time Buyer Support</li>
+    </ul>
+  </section>
+
   <footer>
-    <h2>SELENA POWELL</h2>
+    <h3>SELENA POWELL</h3>
     <img src="https://upload.wikimedia.org/wikipedia/commons/9/92/Keller_Williams_Realty_logo.svg" alt="KW Logo" class="kw-logo" />
     <p>Each office is independently owned and operated.</p>
   </footer>
