--- a/index.html
+++ b/index.html
@@ -44,10 +44,15 @@
     </ul>
   </section>
 
-  <footer>
-    <h3>SELENA POWELL</h3>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/9/92/Keller_Williams_Realty_logo.svg" alt="KW Logo" class="kw-logo" />
-    <p>Each office is independently owned and operated.</p>
-  </footer>
-</body>
-</html>
+  <section class="testimonials">
+    <h2>What My Clients Are Saying</h2>
+    <div class="testimonial">
+      <p>"Selena was absolutely incredible from start to finish. As a first-time homebuyer, I had so many questions — but she made everything feel easy. Her patience, knowledge, and honesty gave me complete confidence in every step of the process. I wouldn’t trust anyone else!"</p>
+      <span>— M. Johnson, Cleveland, OH</span>
+    </div>
+    <div class="testimonial">
+      <p>"I needed to sell my home quickly and Selena delivered. She handled every detail with care and professionalism, and her strategy brought in multiple offers. I closed above asking price. Highly recommend!"</p>
+      <span>— T. Rogers, Maple Heights, OH</span>
+    </div>
+    <div class="testimonial">
+      <p>"Working with Selena was like working
