--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <section class="about">
     <h2>About Me</h2>
     <p>
-      Hi, I’m Selena Powell — a licensed real estate agent with Keller Williams.
+      Hi, I’m Selena Powell — a licensed real estate agent with Keller Williams Elevate.
       I’m passionate about helping individuals and families find the perfect place to call home.
       Whether you’re buying, selling, or investing, I’m here to guide you every step of the way with integrity,
       clarity, and dedication. I believe real estate is more than a transaction — it’s a personal journey, and
