--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="tel:+12166065829" class="btn">📞 Call Now</a>
         <a href="mailto:SelenaPowell@kw.com" class="btn">📧 Email Me</a>
         <a href="https://selenapowell.kw.com" target="_blank" class="btn">🌐 Visit Website</a>
+        <a href="https://calendly.com/selenapowell" target="_blank" class="btn">📅 Schedule Appointment</a>
       </div>
     </div>
     <div class="image">
