--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
 
   <footer>
     <h3>SELENA POWELL</h3>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/9/92/Keller_Williams_Realty_logo.svg" alt="KW Logo" class="kw-logo" />
+    <div class="logo-container">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/92/Keller_Williams_Realty_logo.svg/512px-Keller_Williams_Realty_logo.svg.png" alt="Keller Williams Logo" class="kw-logo" />
+    </div>
     <p>Each office is independently owned and operated.</p>
   </footer>
 </body>
