--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <section class="about">
     <h2>About Me</h2>
     <p>
-      Hi, I’m Selena Powell — a licensed real estate agent with Keller Williams Elevate.
+      Hi, I’m Selena Powell — a licensed real estate agent with Keller Williams.
       I’m passionate about helping individuals and families find the perfect place to call home.
       Whether you’re buying, selling, or investing, I’m here to guide you every step of the way with integrity,
       clarity, and dedication. I believe real estate is more than a transaction — it’s a personal journey, and
@@ -78,9 +78,8 @@
   <footer>
     <h3>SELENA POWELL</h3>
     <div class="logo-container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/92/Keller_Williams_Realty_logo.svg/512px-Keller_Williams_Realty_logo.svg.png" alt="Keller Williams Logo" class="kw-logo" />
+      <img src="KW%20ELEVATE%20RED%20BLACK%20LETTERING%20SOLID%20BACKGROUND%20FAIR%20HOUSING%20OFFICE.png" alt="KW Elevate Logo" class="kw-logo" />
     </div>
-    <p>Each office is independently owned and operated.</p>
   </footer>
 </body>
 </html>
