--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <footer>
     <h3>SELENA POWELL</h3>
     <div class="logo-container">
-      <img src="KW%20ELEVATE%20RED%20BLACK%20LETTERING%20SOLID%20BACKGROUND%20FAIR%20HOUSING%20OFFICE.png" alt="KW Elevate Logo" class="kw-logo" />
+      <img src="kw-elevate-logo.png" alt="KW Elevate Logo" class="kw-logo" />
     </div>
   </footer>
 </body>
