--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
+  <!-- 🔥 Top Banner Image -->
+  <div class="top-banner">
+    <img src="banner.jpg" alt="Find Your Dream Home - Selena Powell" />
+  </div>
+
   <header class="hero">
     <div class="text">
       <h1>Call Me to Discuss<br>Your Real Estate Needs!</h1>
