--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
 </head>
 <body>
 
-  <!-- 🔥 Top Banner Image -->
-  <div class="top-banner">
-    <img src="banner.jpg" alt="Find Your Dream Home - Selena Powell" />
-  </div>
-
   <header class="hero">
     <div class="text">
       <h1>Call Me to Discuss<br>Your Real Estate Needs!</h1>
@@ -50,6 +45,11 @@
       <li>🔑 First-Time Buyer Support</li>
     </ul>
   </section>
+
+  <!-- ✅ Banner placed after Services and before Testimonials -->
+  <div class="top-banner">
+    <img src="banner.jpg" alt="Find Your Dream Home - Selena Powell" />
+  </div>
 
   <section class="testimonials">
     <h2>What My Clients Are Saying</h2>
