--- a/index.html
+++ b/index.html
@@ -46,11 +46,6 @@
     </ul>
   </section>
 
-  <!-- ✅ Banner placed after Services and before Testimonials -->
-  <div class="top-banner">
-    <img src="banner.jpg" alt="Find Your Dream Home - Selena Powell" />
-  </div>
-
   <section class="testimonials">
     <h2>What My Clients Are Saying</h2>
 
@@ -69,6 +64,11 @@
       <span>— J. Brown, Bedford, OH</span>
     </div>
   </section>
+
+  <!-- ✅ Final banner placement between testimonials and contact -->
+  <div class="top-banner">
+    <img src="banner.jpg" alt="Find Your Dream Home - Selena Powell" />
+  </div>
 
   <section class="contact">
     <h2>Contact Me</h2>
