--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </div>
   </section>
 
-  <!-- ✅ Final banner placement between testimonials and contact -->
+  <!-- ✅ Banner stays ONLY here -->
   <div class="top-banner">
     <img src="banner.jpg" alt="Find Your Dream Home - Selena Powell" />
   </div>
