--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </div>
   </section>
 
-  <!-- ✅ Banner stays ONLY here -->
+  <!-- ✅ Correct banner placement — between testimonials and contact -->
   <div class="top-banner">
     <img src="banner.jpg" alt="Find Your Dream Home - Selena Powell" />
   </div>
@@ -87,5 +87,6 @@
       <img src="kw-elevate-logo.png" alt="KW Elevate Logo" class="kw-logo" />
     </div>
   </footer>
+
 </body>
 </html>
