--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
     </div>
   </section>
 
-  <!-- ✅ Correct banner placement — between testimonials and contact -->
-  <div class="top-banner">
-    <img src="banner.jpg" alt="Find Your Dream Home - Selena Powell" />
-  </div>
+  <!-- ✅ Banner placed here between testimonials and contact -->
+  <section class="banner-section">
+    <img src="banner.jpg" alt="Find Your Dream Home - Selena Powell" class="banner-img" />
+  </section>
 
   <section class="contact">
     <h2>Contact Me</h2>
