--- a/index.html
+++ b/index.html
@@ -3,89 +3,77 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Selena Powell - Real Estate Agent</title>
+  <title>Sold by Selena - Real Estate Agent</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <header class="hero">
+  <section class="banner-section">
+    <img src="banner.jpg" alt="Find Your Dream Home - Selena Powell" class="banner-img" />
+  </section>
+
+  <section class="hero">
     <div class="text">
-      <h1>Call Me to Discuss<br>Your Real Estate Needs!</h1>
-      <p>Helping you buy, sell, or invest — with confidence.</p>
+      <h1>Hi, I’m Selena Powell</h1>
+      <p>I'm a dedicated real estate agent with Keller Williams, passionate about helping families find their perfect homes. Whether you're buying, selling, or investing, I’m here to guide you every step of the way with integrity and personalized service.</p>
       <div class="buttons">
-        <a href="tel:+12166065829" class="btn">📞 Call Now</a>
-        <a href="mailto:SelenaPowell@kw.com" class="btn">📧 Email Me</a>
-        <a href="https://selenapowell.kw.com" target="_blank" class="btn">🌐 Visit Website</a>
-        <a href="https://calendly.com/selenapowell" target="_blank" class="btn">📅 Schedule Appointment</a>
+        <a href="https://calendly.com/selenapowell" class="btn" target="_blank">Schedule a Meeting</a>
+        <a href="#contact" class="btn">Contact Me</a>
       </div>
     </div>
     <div class="image">
-      <img src="selena.jpg" alt="Selena Powell">
+      <img src="bigme.png" alt="Selena Powell" />
     </div>
-  </header>
+  </section>
 
   <section class="about">
     <h2>About Me</h2>
-    <p>
-      Hi, I’m Selena Powell — a licensed real estate agent with Keller Williams.
-      I’m passionate about helping individuals and families find the perfect place to call home.
-      Whether you’re buying, selling, or investing, I’m here to guide you every step of the way with integrity,
-      clarity, and dedication. I believe real estate is more than a transaction — it’s a personal journey, and
-      I’m honored to be part of yours.
-    </p>
+    <p>As a proud Keller Williams agent, I bring local expertise and a client-first mindset to every interaction. Real estate is more than just transactions—it's about relationships, trust, and results. I’m committed to making your next move smooth, successful, and memorable.</p>
   </section>
 
   <section class="services">
     <h2>Services</h2>
     <ul>
-      <li>🏠 Home Buying Assistance</li>
-      <li>🏡 Home Selling Strategies</li>
-      <li>🏘️ Investment Property Guidance</li>
-      <li>📋 Market Analysis & Pricing</li>
-      <li>🔑 First-Time Buyer Support</li>
+      <li>🏠 Home Buying</li>
+      <li>🏡 Home Selling</li>
+      <li>📊 Property Market Analysis</li>
+      <li>💼 Investment Consulting</li>
     </ul>
   </section>
 
   <section class="testimonials">
-    <h2>What My Clients Are Saying</h2>
-
+    <h2>What My Clients Say</h2>
     <div class="testimonial">
-      <p>"Selena was absolutely incredible from start to finish. As a first-time homebuyer, I had so many questions — but she made everything feel easy. Her patience, knowledge, and honesty gave me complete confidence in every step of the process. I wouldn’t trust anyone else!"</p>
-      <span>— M. Johnson, Cleveland, OH</span>
+      <p>"Selena was incredible throughout our home-buying process. We felt heard, supported, and truly cared for."</p>
+      <span>– Jackson & Mia L.</span>
     </div>
-
     <div class="testimonial">
-      <p>"I needed to sell my home quickly and Selena delivered. She handled every detail with care and professionalism, and her strategy brought in multiple offers. I closed above asking price. Highly recommend!"</p>
-      <span>— T. Rogers, Maple Heights, OH</span>
+      <p>"Prompt, professional, and deeply knowledgeable. I wouldn’t trust anyone else with my real estate needs."</p>
+      <span>– Rochelle D.</span>
     </div>
-
     <div class="testimonial">
-      <p>"Working with Selena was like working with family. She really listened to what I wanted and helped me find the perfect place. Her kindness and dedication made all the difference."</p>
-      <span>— J. Brown, Bedford, OH</span>
+      <p>"Thanks to Selena, I sold my home above asking price and closed faster than I thought possible."</p>
+      <span>– Marcus B.</span>
     </div>
   </section>
 
-  <!-- ✅ Banner placed here between testimonials and contact -->
-  <section class="banner-section">
-    <img src="banner.jpg" alt="Find Your Dream Home - Selena Powell" class="banner-img" />
-  </section>
-
-  <section class="contact">
+  <section class="contact" id="contact">
     <h2>Contact Me</h2>
-    <form action="https://formspree.io/f/mayvnnaa" method="POST">
-      <input type="text" name="name" placeholder="Your Name" required />
-      <input type="email" name="email" placeholder="Your Email" required />
-      <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+    <form>
+      <input type="text" placeholder="Your Name" required />
+      <input type="email" placeholder="Your Email" required />
+      <textarea rows="5" placeholder="Your Message" required></textarea>
       <button type="submit">Send Message</button>
+      <p class="note">*This form is for demonstration only.</p>
     </form>
-    <p class="note">* Messages are delivered securely to my email.</p>
   </section>
 
   <footer>
-    <h3>SELENA POWELL</h3>
+    <h3>Sold by Selena | Keller Williams</h3>
     <div class="logo-container">
       <img src="kw-elevate-logo.png" alt="KW Elevate Logo" class="kw-logo" />
     </div>
+    <p>&copy; 2025 Selena Powell. All rights reserved.</p>
   </footer>
 
 </body>
