--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
       <h1>Hi, I’m Selena Powell</h1>
       <p>I'm a dedicated real estate agent with Keller Williams, passionate about helping families find their perfect homes. Whether you're buying, selling, or investing, I’m here to guide you every step of the way with integrity and personalized service.</p>
       <div class="buttons">
-        <a href="https://calendly.com/selenapowell" class="btn" target="_blank">Schedule a Meeting</a>
-        <a href="#contact" class="btn">Contact Me</a>
+        <a href="tel:+1234567890" class="btn">📞 Call Now</a>
+        <a href="mailto:selenapowell@example.com" class="btn">📧 Email Me</a>
+        <a href="https://bit.ly/soldbyselena" class="btn" target="_blank">🌐 Visit Website</a>
+        <a href="https://calendly.com/selenapowell" class="btn" target="_blank">📅 Schedule Appointment</a>
       </div>
     </div>
     <div class="image">
