--- a/index.html
+++ b/index.html
@@ -13,22 +13,20 @@
   </section>
 
   <section class="hero">
-    <div class="text">
-      <h1>Hi, I’m Selena Powell</h1>
-      <p>I'm a dedicated real estate agent with Keller Williams, passionate about helping families find their perfect homes. Whether you're buying, selling, or investing, I’m here to guide you every step of the way with integrity and personalized service.</p>
-      <div class="buttons">
-        <a href="tel:+1234567890" class="btn">📞 Call Now</a>
-        <a href="mailto:selenapowell@example.com" class="btn">📧 Email Me</a>
-        <a href="https://bit.ly/soldbyselena" class="btn" target="_blank">🌐 Visit Website</a>
-        <a href="https://calendly.com/selenapowell" class="btn" target="_blank">📅 Schedule Appointment</a>
-      </div>
+  <div class="text">
+    <div class="buttons">
+      <a href="tel:+1234567890" class="btn">📞 Call Now</a>
+      <a href="mailto:selenapowell@example.com" class="btn">📧 Email Me</a>
+      <a href="https://bit.ly/soldbyselena" class="btn" target="_blank">🌐 Visit Website</a>
+      <a href="https://calendly.com/selenapowell" class="btn" target="_blank">📅 Schedule Appointment</a>
     </div>
-  </section>
+  </div>
+</section>
 
   <section class="about">
-    <h2>About Me</h2>
-    <p>As a proud Keller Williams agent, I bring local expertise and a client-first mindset to every interaction. Real estate is more than just transactions—it's about relationships, trust, and results. I’m committed to making your next move smooth, successful, and memorable.</p>
-  </section>
+  <h2>About Me</h2>
+  <p>Hi, I’m Selena Powell — a licensed real estate agent with Keller Williams Elevate. I’m passionate about helping individuals and families find the perfect place to call home. Whether you’re buying, selling, or investing, I’m here to guide you every step of the way with integrity, clarity, and dedication. I believe real estate is more than a transaction — it’s a personal journey, and I’m honored to be part of yours.</p>
+</section>
 
   <section class="services">
     <h2>Services</h2>
