--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
   <section class="hero">
   <div class="text">
     <div class="buttons">
-      <a href="tel:+1234567890" class="btn">📞 Call Now</a>
-      <a href="mailto:selenapowell@example.com" class="btn">📧 Email Me</a>
-      <a href="https://www.kw.com" class="btn" target="_blank">🌐 Visit Website</a>
-      <a href="https://calendly.com/selenapowell" class="btn" target="_blank">📅 Schedule Appointment</a>
-    </div>
+  <a href="tel:+1234567890" class="btn">📞 Call Now</a>
+  <a href="mailto:selenapowell@example.com" class="btn">📧 Email Me</a>
+  <a href="https://www.kw.com" class="btn" target="_blank">🌐 Visit Website</a>
+  <a href="https://calendly.com/selenapowell" class="btn" target="_blank">📅 Schedule Appointment</a>
+  <a href="https://www.instagram.com/soldbyselena_" class="btn" target="_blank">📸 Instagram</a>
+</div>
   </div>
 </section>
 
