--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 </section>
 
   <section class="services">
-    <h2>Services</h2>
-    <ul>
-      <li>🏠 Home Buying</li>
-      <li>🏡 Home Selling</li>
-      <li>📊 Property Market Analysis</li>
-      <li>💼 Investment Consulting</li>
-    </ul>
-  </section>
+  <h2>Services</h2>
+  <ul>
+    <li>🏠 Home Buying</li>
+    <li>🏡 Home Selling</li>
+    <li>🏘️ Renting</li>
+    <li>💼 Investment Properties</li>
+  </ul>
+</section>
 
   <section class="testimonials">
     <h2>What My Clients Say</h2>
