--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <li>🏘️ Renting</li>
     <li>💼 Investment Properties</li>
   </ul>
+  <p><a href="https://www.eventbrite.com/e/home-buying-seminar-with-kw-realtor-selena-powell-tickets-1355718934829?aff=oddtdtcreator" class="btn" target="_blank">🎟️ Attend My Home Buying Seminar</a></p>
 </section>
 
   <section class="testimonials">
