--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="buttons">
   <a href="tel:+12166065829" class="btn">📞 Call Now</a>
   <a href="mailto:selenapowell@example.com" class="btn">📧 Email Me</a>
-  <a href="https://www.kw.com" class="btn" target="_blank">🌐 Visit Website</a>
+  <a href="https://selenapowell.kw.com" class="btn" target="_blank">🌐 Visit Website</a>
   <a href="https://calendly.com/selenapowell" class="btn" target="_blank">📅 Schedule Appointment</a>
   <a href="https://www.instagram.com/soldbyselena_" class="btn" target="_blank">📸 Instagram</a>
 </div>
