--- a/index.html
+++ b/index.html
@@ -58,13 +58,19 @@
 
   <section class="contact" id="contact">
     <h2>Contact Me</h2>
-    <form>
-      <input type="text" placeholder="Your Name" required />
-      <input type="email" placeholder="Your Email" required />
-      <textarea rows="5" placeholder="Your Message" required></textarea>
-      <button type="submit">Send Message</button>
-      <p class="note">*This form is for demonstration only.</p>
-    </form>
+    <form action="https://formsubmit.co/selenapowell@kw.com" method="POST">
+  <label for="name">Name:</label>
+  <input type="text" id="name" name="name" required>
+
+  <label for="email">Email:</label>
+  <input type="email" id="email" name="email" required>
+
+  <label for="message">Message:</label>
+  <textarea id="message" name="message" rows="4" required></textarea>
+
+  <input type="hidden" name="_next" value="https://mariopowell820.github.io/soldbyselena/thank-you.html">
+  <button type="submit">Send</button>
+</form>
   </section>
 
   <footer>
